--- a/ros_webinterface/styles.css
+++ b/ros_webinterface/styles.css
@@ -117,6 +117,11 @@ body {
     margin-bottom: 3px;
 }
 
+
+.d-flex.align-items-center {
+  gap: 10px; /* 원하는 간격으로 조정 */
+}
+
 /* 반응형 웹 디자인을 위해 미디어 쿼리를 추가할 수 있습니다. */
 @media (max-width: 600px) {
     .grid-container {
@@ -137,6 +142,7 @@ body {
   border: 1px solid #795548;
   border-radius: 8px;
   background-color: white;
+  color: black;
   width: 80px;;
   height: 80px;
   padding: 10px 16px;
