--- a/ros_webinterface/styles.css
+++ b/ros_webinterface/styles.css
@@ -47,6 +47,14 @@
   margin-bottom: 20px;
 }
 
+.Stop_Map{
+  border-radius: 8px;
+  font-size: 20px;
+  background-color: white;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
 .SetAgain{
   border-radius: 8px;
   font-size: 20px;
