--- a/ros_webinterface/styles.css
+++ b/ros_webinterface/styles.css
@@ -6,18 +6,55 @@
     font-weight: normal;
     font-style: normal;
 }
+
+/* 공통 스타일 */
 * {
-	font-family: 'GmarketSansMedium';
+    font-family: 'GmarketSansMedium', sans-serif; /* 폰트 적용, sans-serif를 기본으로 설정 */
+}
+body {
+    background-color: white;
+}
+h1, h2, h3, h4, h5 {
+    text-align: center; /* 모든 제목을 중앙 정렬 */
+    padding-top: 30px;
+}
+h1 {
+    font-size: 50px;
+    color: #005F73;
+}
+h2 {
+    font-size: 70px;
+    color: #E9D8A6;
+    text-shadow: 2px 2px #001219;
+}
+h3 {
+    font-size: 70px;
+    color: #EE9B00;
+}
+h4 {
+    font-size: 30px;
+    color: black;
+}
+h5 {
+    font-size: 15px;
+    color: black;
 }
 
-/*index styles*/
+/* 컨테이너 스타일 */
 .con {
   display: grid;
-  grid-template-columns: 1fr 2fr 2fr; /* 3열 그리드, 첫 번째 열은 나머지 열의 절반 크기 */
-  grid-template-rows: 1fr 1fr; /* 2행 그리드 */
+  grid-template-columns: 2fr 4fr;
+  grid-template-rows: 3fr 1fr; /* 2행 그리드 */
   gap: 10px; /* 그리드 항목 간의 간격 */
   padding-left: 60px;
   padding-right: 60px;
+}
+
+.con2{
+  display: grid;
+  grid-template-columns: 1fr 1fr; /* 2개의 열로 설정 */
+  grid-template-rows: auto auto; /* 각 행의 높이는 자동으로 설정 */
+  gap: 10px;
 }
 
 .box {
@@ -27,6 +64,18 @@
   padding: 10px 16px;
   font-size: 20px;
   display: flex;
+  flex-direction: column;
+  align-items: center; /* 내용을 가운데 정렬 */
+}
+
+.box2 {
+  border-radius: 8px;
+  background-color: white;
+  padding: 10px 16px;
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* 내용을 가운데 정렬 */
 }
 
 .large-box {
@@ -39,70 +88,96 @@
   grid-row: 1 / span 3; 
 }
 
-.Start_Map{
+.table-bordered th, .table-bordered td {
+  text-align: center;
+}
+ 
+/* 버튼 스타일 */
+.save_room_info {
+  border-radius: 8px;  
+  padding: 8px 16px;
+  font-size: 15px;
+  width: 100%; /* 너비 설정 */
+  color: white; /* 글자색 설정 */
+  background-color: #005F73; /* 배경색 설정 */
+  cursor: pointer;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.button1 {
+    padding: 0 60px; /* 좌우 패딩 조정 */
+    color: #E9D8A6;
+    background-color: #005F73;
+    cursor: pointer;
+}
+
+.edit-btn {
+  border-radius: 8px;  
+  padding: 8px 16px;
+    font-size: 10px;
+    width: 50%; /* 너비 설정 */
+    color: white; /* 글자색 설정 */
+    background-color: #005F73; /* 배경색 설정 */
+    cursor: pointer;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    align-items: center;
+}
+
+
+.save-room-btn {
+  align-items: center;
   border-radius: 8px;
-  font-size: 20px;
-  background-color: white;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  padding: 8px 16px;
+  font-size: 10px;
+  width: 20%; /* 너비 설정 */
+  color: white; /* 글자색 설정 */
+  background-color: #005F73; /* 배경색 설정 */
+  cursor: pointer;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
-.Stop_Map{
-  border-radius: 8px;
-  font-size: 20px;
-  background-color: white;
-  margin-top: 20px;
-  margin-bottom: 20px;
+
+
+.button1, .Start_Map, .Stop_Map, .SetAgain {
+  border-radius: 8px;  
+  padding: 8px 16px;
+    font-size: 10px;
+    width: 20%; /* 너비 설정 */
+    color: white; /* 글자색 설정 */
+    background-color: #005F73; /* 배경색 설정 */
+    cursor: pointer;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
-.SetAgain{
-  border-radius: 8px;
-  font-size: 20px;
-  background-color: white;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-/*all styles*/
-h1 {
-  padding-top: 30px;
-  font-size: 50px;
-  text-align: center;
-  color: #005F73;
-}
-
-h2 {
-  padding-top: 30px;
-  font-size: 70px;
-  text-align: center;
-  color: #E9D8A6;
-  text-shadow: 2px #001219;
-}
-
-h3 {
-  padding-top: 30px;
-  font-size: 70px;
-  text-align: center;
-  color: #EE9B00;
-}
-
-h4 {
-  padding-top: 30px;
-  font-size: 30px;
-  text-align: center;
-  color: black;
-}
-
-h5 {
-    padding-top: 15px;
-    font-size: 15px;
-    text-align: center;
+/* 모달 스타일 */
+.modal-content {
+    border-radius: 8px;
+    padding: 20px;
     color: black;
 }
 
-body {
-  background-color: white;
+.modal-footer {
+  display: flex;
+  justify-content: center; /* 버튼을 가운데 정렬 */
+  padding: 10px; /* padding 추가 */
 }
+
+.time-settings {
+  display: flex;
+  align-items: center;
+  gap: 8px; /* 입력 필드 사이의 간격 조정 */
+}
+
+.time-input {
+  width: 80px; /* 시간 입력 필드 폭 조정 */
+  text-align: center; /* 텍스트 중앙 정렬 */
+}
+
+
 
 /*info styles*/
 .grid-container {
