--- a/ros_webinterface/styles.css
+++ b/ros_webinterface/styles.css
@@ -40,6 +40,27 @@ h5 {
     color: black;
 }
 
+/* robot style */
+#robotCanvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  width: 800px;
+  height: 600px;
+}
+#map-container {
+  position: relative;
+  width: 800px;
+  height: 600px;
+}
+#map {
+  width: 100%;
+  height: 100%;
+}
+
+
+
 /* 컨테이너 스타일 */
 .con {
   display: grid;
@@ -141,7 +162,7 @@ h5 {
 
 
 
-.button1, .Start_Map, .Stop_Map, .SetAgain {
+.button1, .Start_Map, .Stop_Map, .SetAgain, .Segmentation, .Mapping_Again {
   border-radius: 8px;  
   padding: 8px 16px;
     font-size: 10px;
